Validate Delete Button

--- a/src/app/pages/dte/spin-the-wheel/index/spin-the-wheel.component.html
+++ b/src/app/pages/dte/spin-the-wheel/index/spin-the-wheel.component.html
@@ -79,7 +79,7 @@
               <button id="btn-edit" mat-icon-button color="" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button id="btn-delete" mat-icon-button color="primary" matTooltip="{{'global.button.delete' | translate}}"
+              <button *ngIf="row.status_label !== 'Berjalan'" id="btn-delete" mat-icon-button color="primary" matTooltip="{{'global.button.delete' | translate}}"
                  (click)="deleteTp(row.id)">
                 <mat-icon>delete</mat-icon>
               </button>
