--- a/src/app/pages/dte/audience/dialog/dialog-process/dialog-process.component.html
+++ b/src/app/pages/dte/audience/dialog/dialog-process/dialog-process.component.html
@@ -3,7 +3,7 @@
   <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar fxLayout="column" fxLayoutAlign=" center">
     <mat-spinner diameter="100"></mat-spinner>
     <div class="dialog__title mt-24">{{'dte.audience.on_process_data' | translate}}</div>
-    <div class="dialog__subtitle">{{'dte.audience.please_wait' | translate}}</div>
+    <!-- <div class="dialog__subtitle">{{'dte.audience.please_wait' | translate}}</div> -->
   </div>
 
   <div class="border-top">
