Resolve pagination issues and Sort issues

--- a/src/app/pages/dte/spin-the-wheel/index/spin-the-wheel.component.html
+++ b/src/app/pages/dte/spin-the-wheel/index/spin-the-wheel.component.html
@@ -21,7 +21,7 @@
       <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
         [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
         [rowHeight]="'auto'" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
-        [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true">
+        [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)">
 
         <ngx-datatable-column name="Nama Program" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
