add UI tabs daftar produk rrp

--- a/src/app/pages/sku-management/product-cashier/index/index.component.html
+++ b/src/app/pages/sku-management/product-cashier/index/index.component.html
@@ -28,7 +28,7 @@
     </button>
     <button
       style="min-width: 170px"
-      [routerLink]="['/sku-management', 'product-cashier', 'create']"
+      [routerLink]="['/sku-management', 'product-cashier', activeTabs, 'create']"
       mat-raised-button
       aria-label="Produk"
       type="button"
@@ -44,11 +44,23 @@
         <a
           *ngIf="permission.pengajuan_produk"
           mat-tab-link
-          [routerLink]="['/sku-management', 'product-cashier', 'submission']"
+          [routerLink]="['/sku-management', 'product-cashier']"
           class="tab-link"
           >Produk Diajukan</a
         >
-        <a mat-tab-link [active]="true" class="tab-link">Daftar Produk Kasir</a>
+        <a
+          mat-tab-link
+          [routerLink]="['/sku-management', 'product-cashier', 'list']"
+          [active]="activeTabs === 'list'"
+          class="tab-link"
+        >Daftar Produk Kasir</a>
+        <a
+          mat-tab-link
+          [routerLink]="['/sku-management', 'product-cashier', 'rrp']"
+          [active]="activeTabs === 'rrp'"
+          class="tab-link"
+          >Daftar Produk Kasir RRP</a
+        >
         <div class="search-field">
           <input
             matInput
@@ -102,6 +114,7 @@
                 [routerLink]="[
                   '/sku-management',
                   'product-cashier',
+                  activeTabs,
                   'detail',
                   row.id
                 ]"
@@ -150,6 +163,7 @@
                   [routerLink]="[
                     '/sku-management',
                     'product-cashier',
+                    activeTabs,
                     'detail',
                     row.id
                   ]"
@@ -164,6 +178,7 @@
                   [routerLink]="[
                     '/sku-management',
                     'product-cashier',
+                    activeTabs,
                     'edit',
                     row.id
                   ]"
