Resolve issues in Lottery/Audience

--- a/src/app/pages/dte/lottery/edit/lottery-edit.component.html
+++ b/src/app/pages/dte/lottery/edit/lottery-edit.component.html
@@ -4,7 +4,7 @@
   fusePerfectScrollbar
 >
   <!-- HEADER -->
-  <page-content-header contentTitle="Buat Spin The Wheel">
+  <page-content-header contentTitle="Buat Undian">
     <!-- <button
       id="btn-create-trade"
       style="width: 170px"
