--- a/src/app/pages/dte/template/edit/template-edit.component.html
+++ b/src/app/pages/dte/template/edit/template-edit.component.html
@@ -639,6 +639,7 @@
                               (click)="showNextQuestion(i, j)"
                               mat-icon-button
                               fxFlex="none"
+                              [disabled]="isDetail"
                               *ngIf="frmIsBranching.value === true && allQuestionList[i]['possibilities'][j]['isBranching'] === false"
                             >
                               <mat-icon style="color: #4A90E2; cursor: pointer;">
@@ -653,7 +654,7 @@
                               style="overflow: hidden"
                               *ngIf="frmIsBranching.value === true && allQuestionList[i]['possibilities'][j]['isBranching'] === true"
                             >
-                              <mat-select formControlName="next_question" placeholder="{{'dte.template_tugas.next_question_posibility' | translate}}">
+                              <mat-select formControlName="next_question" placeholder="{{'dte.template_tugas.next_question_posibility' | translate}}" [disabled]="isDetail">
                                 <mat-option value="" (click)="onPossibilitiesChange('none', i, j)">{{'dte.template_tugas.none' | translate}}</mat-option>
                                 <mat-option
                                   *ngFor="let possibility of filteringPossibilitiesQuestion(item.get('id').value); let p_i = index;"
@@ -669,6 +670,7 @@
                               (click)="showNextQuestion(i, j)"
                               mat-icon-button
                               fxFlex="none"
+                              [disabled]="isDetail"
                               *ngIf="frmIsBranching.value === true && allQuestionList[i]['possibilities'][j]['isBranching'] === true"
                             >
                               <mat-icon style="color: red;cursor: pointer;">remove_circle</mat-icon>
@@ -737,6 +739,7 @@
                           fxFlex="none"
                           mat-icon-button
                           (click)="showNextQuestion(i, 0)"
+                          [disabled]="isDetail"
                           *ngIf="frmIsBranching.value === true && allQuestionList[i]['possibilities'][0]['isBranching'] === false"
                         >
                           <mat-icon style="color: #4A90E2; cursor: pointer;">
@@ -746,9 +749,12 @@
   
                         <!-- SELECT NEXT QUESTION -->
                         <mat-form-field
+                          fxFlex
+                          class="opsi is-light"
+                          style="overflow: hidden"
                           *ngIf="frmIsBranching.value === true && allQuestionList[i]['possibilities'][0]['isBranching'] === true"
-                          fxFlex class="opsi is-light">
-                          <mat-select formControlName="next_question" placeholder="{{'dte.template_tugas.next_question_posibility' | translate}}">
+                        >
+                          <mat-select formControlName="next_question" placeholder="{{'dte.template_tugas.next_question_posibility' | translate}}" [disabled]="isDetail">
                             <mat-option value="" (click)="onPossibilitiesChange('none', i, 0)">
                               {{'dte.template_tugas.none' | translate}}</mat-option>
                             <mat-option
@@ -766,6 +772,7 @@
                           fxFlex="none"
                           mat-icon-button
                           (click)="showNextQuestion(i, 0)"
+                          [disabled]="isDetail"
                           *ngIf="frmIsBranching.value === true && allQuestionList[i]['possibilities'][0]['isBranching'] === true"
                         >
                           <mat-icon style="color: red;cursor: pointer;">remove_circle</mat-icon>
