--- a/src/app/pages/dte/lottery/edit/lottery-edit.component.html
+++ b/src/app/pages/dte/lottery/edit/lottery-edit.component.html
@@ -321,68 +321,152 @@
             <form
               autocomplete="off"
               [formGroup]="formPreview"
-              fxLayout="row"
               fxLayoutGap="16px"
             >
-              <div fxFlex="50%">
-                <div class="grey-box">
-                  <p
-                    style="
-                      font-style: italic;
-                      font-weight: bold;
-                      text-align: center;
-                    "
-                  >
-                    Floating Icon AYO SRC Toko Home Page
-                  </p>
-                  <div class="px-24">
-                    <div
-                      ngfDrop
-                      selectable="1"
-                      class="rectangle-16"
-                      [(validDrag)]="validComboDrag"
-                      [(file)]="files"
-                      accept="image/*"
-                      [class.invalid-drag]="validComboDrag === false"
-                      [class.valid-drag]="validComboDrag"
-                      (fileChange)="changeImage($event)"
-                      [(invalidDrag)]="isDetail"
-                      [fileDropDisabled]="isDetail"
+              <div fxLayout="row" fxLayoutGap="16px">
+                <div fxFlex="50%">
+                  <div>
+                    <p
+                      style="
+                        font-style: italic;
+                        font-weight: bold;
+                        text-align: center;
+                      "
                     >
+                    Visual Header Kupon Undian
+                    </p>
+                    <div class="px-24">
                       <div
-                        class="p-24"
-                        fxLayout="column"
-                        fxLayoutAlign="center center"
+                        ngfDrop
+                        selectable="1"
+                        class="rectangle-16"
+                        [(validDrag)]="validComboDrag"
+                        [(file)]="files"
+                        accept="image/*"
+                        [class.invalid-drag]="validComboDrag === false"
+                        [class.valid-drag]="validComboDrag"
+                        (fileChange)="changeImage($event)"
+                        [(invalidDrag)]="isDetail"
+                        [fileDropDisabled]="isDetail"
                       >
-                        <mat-icon
-                          style="width: 48px; height: 48px; font-size: 48px"
-                          >add_photo_alternate_outline</mat-icon
+                        <div
+                          class="p-24"
+                          fxLayout="column"
+                          fxLayoutAlign="center center"
                         >
-                        <br />
-                        <span matPrefix>Tarik Gambar Kesini</span>
+                          <mat-icon
+                            style="width: 48px; height: 48px; font-size: 48px"
+                            >add_photo_alternate_outline</mat-icon
+                          >
+                          <br />
+                          <span matPrefix>Tarik Gambar Kesini</span>
+                        </div>
                       </div>
                     </div>
+                    <p style="font-weight: bold; text-align: center">Preview</p>
+                    <div style="text-align: center" *ngIf="imageConverted">
+                      <img
+                        [src]="imageConverted"
+                        alt="Preview Image"
+                        width="200px"
+                        height="100px"
+                      />
+                    </div>
+                    <p
+                      style="
+                        font-style: italic;
+                        font-weight: bold;
+                        text-align: center;
+                      "
+                    >
+                      Visual Header Kupon Undian
+                    </p>
                   </div>
-                  <p style="font-weight: bold; text-align: center">Preview</p>
-                  <div style="text-align: center" *ngIf="imageConverted">
-                    <img
-                      [src]="imageConverted"
-                      alt="Preview Image"
-                      width="200px"
-                      height="100px"
-                    />
-                  </div>
-                  <p
-                    style="
-                      font-style: italic;
-                      font-weight: bold;
-                      text-align: center;
-                    "
-                  >
-                    Floating Icon AYO SRC Toko Home Page
-                  </p>
                 </div>
-
+                <div fxFlex="50%">
+                  <div>
+                    <p
+                      style="
+                        font-style: italic;
+                        font-weight: bold;
+                        text-align: center;
+                      "
+                    >
+                      Visual Header di List Program Kupon Undian
+                    </p>
+                    <div class="px-24">
+                      <div
+                        ngfDrop
+                        selectable="1"
+                        class="rectangle-16"
+                        [(validDrag)]="validComboDrag"
+                        [(file)]="files"
+                        accept="image/*"
+                        [class.invalid-drag]="validComboDrag === false"
+                        [class.valid-drag]="validComboDrag"
+                        (fileChange)="changeImage($event)"
+                        [(invalidDrag)]="isDetail"
+                        [fileDropDisabled]="isDetail"
+                      >
+                        <div
+                          class="p-24"
+                          fxLayout="column"
+                          fxLayoutAlign="center center"
+                        >
+                          <mat-icon
+                            style="width: 48px; height: 48px; font-size: 48px"
+                            >add_photo_alternate_outline</mat-icon
+                          >
+                          <br />
+                          <span matPrefix>Tarik Gambar Kesini</span>
+                        </div>
+                      </div>
+                    </div>
+                    <p style="font-weight: bold; text-align: center">Preview</p>
+                    <div style="text-align: center" *ngIf="imageConverted">
+                      <img
+                        [src]="imageConverted"
+                        alt="Preview Image"
+                        width="200px"
+                        height="100px"
+                      />
+                    </div>
+                    <p
+                      style="
+                        font-style: italic;
+                        font-weight: bold;
+                        text-align: center;
+                      "
+                    >
+                      Visual Header di List Program Kupon Undian
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div fxLayout="row" class="px-24">
+                <div fxFlex="100%">
+                  <p style="font-style: italic;font-weight: bold; margin-bottom: 0px">Deskripsi Kupon Undian</p>
+                  <div fxLayout="column" fxFlex="100">
+                  <mat-form-field fxFlex="100%" class="descInput exportTextarea desc-template" floatLabel="never">
+                    <textarea matInput [froalaEditor]="options" formControlName="name" data-froala-id="froala-tugas"></textarea>
+                  </mat-form-field>
+                  </div>
+                </div>
+              </div>
+              <div fxLayout="row" class="px-24">
+                <div fxFlex="100%">
+                  <div fxLayout="row" fxLayoutAlign="space-between center">
+                    <p style="font-style: italic;font-weight: bold; margin-bottom: 0px">Deksripsi T&C</p>
+                    <mat-slide-toggle style="margin-bottom: 0px; align-self: end" formControlName="activeTerms">Aktifkan</mat-slide-toggle>
+                  </div>
+                  <div fxLayout="column" fxFlex="100">
+                  <mat-form-field fxFlex="100%" class="descInput exportTextarea desc-template" floatLabel="never">
+                    <textarea matInput [froalaEditor]="options" formControlName="name" data-froala-id="froala-tugas"></textarea>
+                  </mat-form-field>
+                  </div>
+                </div>
+              </div>
+              <div>
                 <div class="confirm pt-24 pb-24 px-24" *ngIf="!isDetail">
                   <button
                     id="btn-simpan"
@@ -401,32 +485,120 @@
                     class="ml-24 confirmation-button" 
                     (click)="submitPublishUnpublish()" 
                     fxFlex="20">
-                      Test<!-- {{ detailFormSpin.status === 'publish' ? ('dte.pengatur_jadwal_program.text9' | translate) : ('dte.pengatur_jadwal_program.text8' | translate) }} -->
+                      Publish<!-- {{ detailFormSpin.status === 'publish' ? ('dte.pengatur_jadwal_program.text9' | translate) : ('dte.pengatur_jadwal_program.text8' | translate) }} -->
                   </button>
                 </div>
-                
               </div>
-              <div fxFlex="1"></div>
-              <div fxFlex="50%">
-                <div fxLayout="row" class="px-24">
-                  <mat-form-field fxFlex class="is-light form-primary">
-                    <input
-                      matInput
-                      type="text"
-                      placeholder="Nama Program"
-                      formControlName="preview_header"
-                      name="preview_header"
-                    />
-                    <mat-error
-                      *ngIf="formPreview.controls['preview_header'].hasError('required') && formPreview.controls['preview_header'].touched">
-                      {{'dte.coin_disbursement.text12' | translate}} {{'global.messages.mandatory_text' | translate}}
-                    </mat-error>
-                  </mat-form-field>
+              
+            </form>
+
+          </div>
+        </mat-tab>
+        <mat-tab label="List Pemenang" [disabled]="false">
+          <div class="ayo-middle py-24" fxLayout="column">
+            
+            <form
+              autocomplete="off"
+              [formGroup]="formListPemenang"
+              fxLayoutGap="16px"
+            >
+              <div fxLayout="row" fxLayoutGap="16px">
+                <div fxFlex="50%">
+                  <div>
+                    <p
+                      style="
+                        font-style: italic;
+                        font-weight: bold;
+                        text-align: center;
+                      "
+                    >
+                    Visual Header Pemenang Undian
+                    </p>
+                    <div class="px-24">
+                      <div
+                        ngfDrop
+                        selectable="1"
+                        class="rectangle-16"
+                        [(validDrag)]="validComboDrag"
+                        [(file)]="files"
+                        accept="image/*"
+                        [class.invalid-drag]="validComboDrag === false"
+                        [class.valid-drag]="validComboDrag"
+                        (fileChange)="changeImage($event)"
+                        [(invalidDrag)]="isDetail"
+                        [fileDropDisabled]="isDetail"
+                      >
+                        <div
+                          class="p-24"
+                          fxLayout="column"
+                          fxLayoutAlign="center center"
+                        >
+                          <mat-icon
+                            style="width: 48px; height: 48px; font-size: 48px"
+                            >add_photo_alternate_outline</mat-icon
+                          >
+                          <br />
+                          <span matPrefix>Tarik Gambar Kesini</span>
+                        </div>
+                      </div>
+                    </div>
+                    <p style="font-weight: bold; text-align: center">Preview</p>
+                    <div style="text-align: center" *ngIf="imageConverted">
+                      <img
+                        [src]="imageConverted"
+                        alt="Preview Image"
+                        width="200px"
+                        height="100px"
+                      />
+                    </div>
+                    <p
+                      style="
+                        font-style: italic;
+                        font-weight: bold;
+                        text-align: center;
+                      "
+                    >
+                      Visual Header Pemenang Undian
+                    </p>
+                  </div>
                 </div>
-                <div fxLayout="row" class="px-24 pb-24">
-                  <img mat-list-icon src="assets/images/ayo/preview-spin.png" style="max-height: 100%;" />
+              </div>
+              <div fxLayout="column" class="px-20 py-16">
+                <div fxLayout="row" fxLayoutGap="16px" *ngIf="!isDetail">
+                  <div fxLayout="column">
+                    <button
+                      mat-raised-button
+                      type="button"
+                      class="is-danger"
+                      (click)="exportAudience()"
+                    >
+                      <mat-icon>arrow_upward</mat-icon> Upload List Pemenang
+                    </button>
+                    <label *ngIf="exportTemplate" style="color: white;">{{'dte.audience.downloading_template' | translate}}</label>
+                  </div>
+                  <button
+                    mat-raised-button
+                    type="button"
+                    class="is-danger"
+                    (click)="importAudience()"
+                  >
+                    <mat-icon>arrow_downward</mat-icon> Download List Pemenang
+                  </button>
                 </div>
-                
+              </div>
+              <div>
+                <div class="confirm pt-24 pb-24 px-24" *ngIf="!isDetail">
+                  <button
+                    id="btn-simpan"
+                    mat-raised-button
+                    type="button"
+                    class="confirmation-button"
+                    fxFlex="20"
+                    (click)="submitPreview()"
+                  >
+                    {{ ls.locale.global.button.save }}
+                  </button>
+                </div>
               </div>
               
             </form>
